--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,7 +18,7 @@ jobs:
      - run: docker build -t "$IMAGE_NAME" .
 
      # scan the image
-     - run: docker run --rm -v /var/run/docker.sock:/var/run/docker.sock $SCAN_IMAGE_NAME /bin/inline_scan analyze -s https://secure.sysdig.com -k "$SYSDIG_SECURE_TOKEN" "$IMAGE_NAME"
+     - run: docker run --rm -v /var/run/docker.sock:/var/run/docker.sock $SCAN_IMAGE_NAME /bin/inline_scan analyze -s https://us2.app.sysdig.com -k "$SYSDIG_SECURE_TOKEN" "$IMAGE_NAME"
 
      # deploy the image
      - run: docker push "$IMAGE_NAME"
