--- a/.github/workflows/sysdig_buildandscan.yml
+++ b/.github/workflows/sysdig_buildandscan.yml
@@ -25,6 +25,7 @@ jobs:
         dockerfile-path: ./Dockerfile
         input-type: docker-daemon
         ignore-failed-scan: true
+        sysdig-secure-url: us2.app.sysdig.com
 
     - uses: github/codeql-action/upload-sarif@v1
       if: always()
