--- a/.github/workflows/sysdig_buildandscan.yml
+++ b/.github/workflows/sysdig_buildandscan.yml
@@ -12,14 +12,14 @@ jobs:
     - uses: actions/checkout@v1
 
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag sysdiglabs/dummy-vuln-app:latest
+      run: docker build . --file Dockerfile --tag brunolocal:latest
 
     - name: Sysdig Secure Inline Scan
       id: scan
       uses: sysdiglabs/scan-action@v3
       with:
         # Tag of the image to analyse
-        image-tag: "sysdiglabs/dummy-vuln-app:latest"
+        image-tag: "brunolocal:latest"
         # API token for Sysdig Scanning auth
         sysdig-secure-token: ${{ secrets.KUBELAB_SECURE_API_TOKEN }}
         dockerfile-path: ./Dockerfile
