--- a/.github/workflows/sysdig_buildandscan.yml
+++ b/.github/workflows/sysdig_buildandscan.yml
@@ -12,22 +12,15 @@ jobs:
     - uses: actions/checkout@v1
 
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag brunolocal:latest
+      run: docker build . --file Dockerfile --tag sysdiglabs/dummy-vuln-app:latest
 
     - name: Sysdig Secure Inline Scan
-      id: scan
       uses: sysdiglabs/scan-action@v3
       with:
         # Tag of the image to analyse
-        image-tag: "brunolocal:latest"
+        image-tag: "sysdiglabs/dummy-vuln-app:latest"
         # API token for Sysdig Scanning auth
         sysdig-secure-token: ${{ secrets.KUBELAB_SECURE_API_TOKEN }}
         dockerfile-path: ./Dockerfile
         input-type: docker-daemon
-        ignore-failed-scan: true
         sysdig-secure-url: https://us2.app.sysdig.com
-
-    - uses: github/codeql-action/upload-sarif@v1
-      if: always()
-      with:
-        sarif_file: ${{ steps.scan.outputs.sarifReport }}
